Collect with Stream.toList
None of the three lists is modified after being built, so the shorter
terminal operation does.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>